-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/matcher/expression_parameterization.h:133: UNINIT_CTOR 144036 Class member declaration for "_firstParamId".
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/matcher/expression_parameterization.h:58: UNINIT_CTOR 144036 Non-static class member "_firstParamId" is not initialized in this constructor nor in any functions that it calls.
- is related to
-
SERVER-109116 Coverity analysis defect 146959: Uninitialized scalar field
-
- Closed
-
- related to
-
SERVER-109042 Coverity analysis defect 147900: Uninitialized scalar field
-
- Closed
-