SERVER-109130 SERVER-109116 SERVER-109042: Initialize scalar fields in several QO classes (#40203)

GitOrigin-RevId: 9de99e1cac752579eb1e107d80cdd4f16f16c4c0